# Cairness

./: .claude  .gitignore  README.md  cairn_install  cairn_uninstall  cairn_update  pyproject.toml
.claude/: CHANGELOG.md  CLAUDE.md  UPGRADE.md  harness.config.yaml
Golang/: CHEATSHEET.md  README.md  coding-style.md  domain-rules.md  project-context.md  spec_reviewer.md  task.md  test_spec.md  框架目录组织.md
cairn-core/: CHANGELOG.md  CLAUDE.md  UPGRADE.md  cc-cairn.py  harness.config.yaml  settings.json  settings.local.json
tests/: conftest.py  test-policy.yaml  test_adapter_capabilities.py  test_adapter_check_cli.py  test_adapter_contract.py  test_adapter_host_smoke.py  test_adapter_installation.py  test_adapter_regression.py  test_adapter_verification_integration.py  test_baseline_gitignore.py  test_behavior_cases.py  test_cairness_action.py  test_cc_init_existing_project_contract.py  test_change_docs_parsing.py  test_change_findings.py  test_change_identity_schema.py  test_change_lint.py  test_cli_adapter_installation.py  test_cli_custom_framework_consumers.py  test_cli_doctor.py  test_cli_explain.py  test_cli_init.py  test_cli_release.py  test_cli_version.py  test_codex_adapter.py  test_codex_adapter_evidence_semantics.py  test_codex_onboarding_coexistence.py  test_codex_project_asset_safety.py  test_command_protocol_contract.py  test_dashboard.py  test_delta_check.py  test_deps_orphans_contract.py  test_doctor_command_entrypoints.py  test_doctor_onboarding_metadata.py  test_enums_schema_template.py  test_enums_single_source.py  test_event_021.py  test_event_check.py  (+84 more)
(+849 files in other folders)
